--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MAC Global Services</title>
+    <title>MAC Global Services | Education Consultancy</title>
   </head>
   <body>
     <div id="root"></div>
